Add raport helper functions and endpoints for reports to the admin module
